0.73 (05.30.2006) - John Siracusa <siracusa@mindspring.com>

    * The Loader now automatically skips tables without primary keys.
    * Moved some database introspection code to a new version of Rose::DB, 
      which this version of Rose::DB::Object now requires.
    * Fixed a bug that caused chkpass columns to be erased after some save()s.
      (Reported by Cees Hek)

0.727 (05.24.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that caused custom primary key sequences to be improperly 
      configured in the code generated by the perl_class_defintion() method.
      (Reported by Ethan Rowe)
    * Fixed a bug that caused false boolean values to be ignored when an
      object was loaded, modified, and then saved.  (Patch by Cees Hek)

0.726 (05.17.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed incorrect skip count in t/spot-check-07.t

0.725 (05.17.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that caused self-referential many-to-many relationships to
      fail during cascaded save() operations.  (Reported by Michael Drozdov)
    * The test suite now requires DBD::SQLite version 1.11 or later.
    * Modified auto-init system to account for custom FetchHashKeyName
      DBI settings.

0.724 (05.11.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the replace_column() Metadata method.
    * The add_now and add_on_save relationship methods now return
      the number of items added when called in scalar context and 
      the list of items added when called in list context.
      (Suggested by Jesse Brown)

0.723 (05.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that caused Rose::DB::Object::Cached objects
      to stay in the cache after being delete()d.
    * Added clone() and clone_and_reset() Helper methods.
    * The tutorial now recommends "use base ..." over direct modification
      of @ISA in order to work better with circular relationships.