@@ -5,6 +5,7 @@
       which this version of Rose::DB::Object now requires.
     * Fixed a bug that caused chkpass columns to be erased after some save()s.
       (Reported by Cees Hek)
+    * XXX: perl_table_definition
 
 0.727 (05.24.2006) - John Siracusa <siracusa@mindspring.com>
 
